Fix alignment of the vertical lines in the posts lists yet again

--- a/src/components/PostListItem/style.scss
+++ b/src/components/PostListItem/style.scss
@@ -77,8 +77,7 @@ $border-styling: dashed 1px $color-gray-border;
             margin-right: 3rem;
             font-size: $typographic-base-font-size * 1.1;
             border-top: $border-styling;
-            display: flex;
-            align-items: center;
+            padding-top: 1.1rem;
             color: gray;
 
             .month {
